--- a/index.html
+++ b/index.html
@@ -5,45 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title> Um simples site pessoal </title>
+    <title> Conheça o Gabs</title>
 </head>
 <body>
+    
 
-    <nav>
-        <ul>
-           <li> <a href="#home">Gabs</a></li>
-           <li><a href="#projetos">Projetos</a></li>
-           <li><a href="#ee">Formação</a></li>
-           <li><a href="#fale">Fale comigo</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="#gabs">Gabs</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#ee">formação</a></li>
+                <li><a href="#fale">fala comigo</a></li>
+            </ul>
+        </nav>
 
-    <main>
-        <section id="home"> 
-            <div>            
-                <img id="gabs"src="img/gabs.jpeg" title="Gabs">
-                <h1>Olá eu sou Gabs</h1>
-            </div>
+<main>
+        <section id="gabs">
+                <img id="img-gabs" src="img/gabs.jpeg" alt="Foto do Gabriel" title="Oi eu sou Gabs"/>
+                <h1>Oi eu sou o Gabs</h1>
+                   <!--
+                <h2>Desenvolvedor Java Júnior</h2>                 
+                    <p>Meu interesse por computação cresce desde o
+                    curso técnico, Mas agora na universidade que
+                    tive a oportunidade de mergulhar no universo
+                    da engenharia de software e encontrar minha
+                    vocação. Estou em busca oportunidade como
+                    desenvolvedor para explorar meu potencial ao
+                    máximo</p>
+                    -->           
         </section>
 
         <section id="projetos">
-            <div>
-                <h1>Projetos</h1>
-            </div>
+            <h1>Projetos</h1>
         </section>
 
         <section id="ee">
-            <div>
-                <h1>Experiencia e Formação</h1>
-            </div>
+            <h1>Educação e experiencia</h1>
         </section>
 
-        <section id="fale"> 
-            <div>
-                <h1>Vamos trocar uma ideia ?</h1>
-            </div>
+        <section id="fale">
+            <h1>Vamos trocar uma ideia</h1>
         </section>
-    </main>
    
+
+</main>
 </body>
 </html>
