--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <ul>
                 <li><a href="#gabs">Gabs</a></li>
                 <li><a href="#projetos">Projetos</a></li>
-                <li><a href="#ee">formação</a></li>
-                <li><a href="#fale">fala comigo</a></li>
+                <li><a href="#ee">Formação</a></li>
+                <li><a href="#fale">Fala comigo</a></li>
             </ul>
         </nav>
 
@@ -44,7 +44,7 @@
         </section>
 
         <section id="fale">
-            <h1>Vamos trocar uma ideia</h1>
+            <h1>Vamos trocar uma ideia ?</h1>
         </section>
    
 
