--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
 <main>
         <section id="gabs">
                 <img id="img-gabs" src="img/gabs.jpeg" alt="Foto do Gabriel" title="Oi eu sou Gabs"/>
-                <h1>Oi eu sou o Gabs</h1>               
-                    <p>Meu interesse por computação cresce desde o
-                    curso técnico, Mas agora na universidade que
-                    tive a oportunidade de mergulhar no universo
-                    da engenharia de software e encontrar minha
-                    vocação. Estou em busca oportunidade como
-                    desenvolvedor para explorar meu potencial ao
+                           
+                    <p>
+                    <h1>Oi eu sou o Gabs</h1>    
+                    Meu interesse por computação cresce desde o </br>
+                    curso técnico, Mas agora na universidade que </br>
+                    tive a oportunidade de mergulhar no universo </br>
+                    da engenharia de software e encontrar minha </br>
+                    vocação. Estou em busca oportunidade como </br> 
+                    desenvolvedor para explorar meu potencial ao </br>
                     máximo</p>
                               
         </section>
