--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="gabsLeft">
             
        <center><img id="img-gabs" src="img/gabs.jpeg" alt="Foto do Gabriel" title="Oi eu sou Gabs"/></center> 
-       <h1>Oi eu sou o Gabriel</h1>
+       <h1>Oi eu sou o Gabriel Martins</h1>
         </div>
 
         <div id="gabsRight">  
