adjusted responsive videos

--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
                                 </u></a></p>
                     </div>
 
-                    <div class="tweet-pic">
+                    <div class="tweet-post-video">
+                        <div class="tweet-video">
                         <video src="./img/video-post2.mp4" preload="none" controls="" loop="" width="700"
-                            poster="./img/preview-post2.png"></video>
+                            poster="./img/preview-post2.png"></video>                            
+                        </div>
                     </div>
 
                     <div class="tweet-react">
@@ -145,9 +147,11 @@
                             Link: <a href="https://github.com/Dev-Gabriel-Martins/a3-facul"><u>
                                     Dev-Gabriel-Martins/a3-facul</u></a> </p>
                     </div>
-                    <div class="tweet-pic">
+                    <div class="tweet-post-video">
+                        <div class="tweet-video">
                         <video src="./img/video-post3.mp4" preload="none" controls="" loop="" width="700"
                             poster="./img/preview-post3.png"></video>
+                    </div>
                     </div>
                     <div class="tweet-react">
                         <a href="javascript:clickReaction('reactLike2')" class="reaction" id="reactLike2">
