adjusted font family e font size

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="My personal portfolio">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Onest" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -32,8 +32,7 @@
                     </div>
                 </div>
                 <div class="username">
-                    <span>Gabriel Martins </span>
-                    <img src="./img/emoji-coffee.svg" alt="Verified">
+                    <span>Gabriel Martins☕</span>                    
                 </div>
                 <div class="role">
                     <span>Junior Software Engineer </span>
@@ -303,7 +302,7 @@
                     </div>
                     <div class="tweet-text">
                         <p> <b>Cursos</b> </br>
-                            <a href="https://github.com/Dev-Gabriel-Martins/Aprendendo-Logica/tree/master"><u></a>Algoritmos e Lógica de Programação </u> - Udemy -  30.5 horas </br>
+                            <a href="https://github.com/Dev-Gabriel-Martins/Aprendendo-Logica"><u> Algoritmos e Lógica de Programação </u> </a> - Udemy -  30.5 horas </br>
                             <a href="https://github.com/Dev-Gabriel-Martins/Java-Completo"><u>Java - Programação Orientada a Objetos</u></a> - Udemy -  55 horas</br>
                             <a href="https://www.udemy.com/course/bancos-de-dados-relacionais-basico-avancado/"><u>Banco de Dados e SQL </u></a> - Udemy -  em andamento </br>                                                        
                         </p>
